--- a/.gitignore
+++ b/.gitignore
@@ -282,3 +282,4 @@ ModelManifest.xml
 /ExamNew/ExamNew/Main.cpp
 /ExamNew/ExamNew/ExamNew.vcxproj.filters
 /ExamNew/ExamNew/ExamNew.vcxproj
+/RealGithub
